cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_17398_csye6225-infra.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: CSYE 6225 Cloud Formation

Parameters:

  VpcCidrBlock:

    Description: "CIDR block for VPC"

    Type: String

    Default: "10.0.0.0/16"

  PublicSubnet1CIDR:

    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone

    Type: String

    Default: 10.0.10.0/24

  PublicSubnet2CIDR:

    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone

    Type: String

    Default: 10.0.20.0/24

  PublicSubnet3CIDR:

    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone

    Type: String

    Default: 10.0.30.0/24

  PrivateSubnet1CIDR:

    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone

    Type: String

    Default: 10.0.40.0/24

  PrivateSubnet2CIDR:

    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone

    Type: String

    Default: 10.0.50.0/24

  PrivateSubnet3CIDR:

    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone

    Type: String

    Default: 10.0.60.0/24

  TcpPort:

    Description: Enter RDS Listening TCP Port number.

    Type: Number

    Default: '3306'

  DatabaseInstanceIdentifier:

    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'

    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters

    Default: csye6225

    Description: Instance identifier name

    MaxLength: 60

    MinLength: 1

    Type: String

  DatabaseName:

    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'

    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters

    Default: csye6225

    Description: MySQL database name

    MaxLength: 64

    MinLength: 1

    Type: String

  DatabaseUser:

    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'

    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters

    Default: csye6225

    Description: Username for MySQL database access

    MaxLength: 16

    MinLength: 1

    NoEcho: true

    Type: String

  DatabasePassword:

    AllowedPattern: '[a-zA-Z0-9]*'

    ConstraintDescription: Must contain only alphanumeric characters

    Default: Pass1234

    Description: Password for MySQL database access

    MaxLength: 41

    MinLength: 8

    NoEcho: true

    Type: String

  DatabaseBackupRetentionPeriod:

    ConstraintDescription: Database backup retention period must be between 0 and 35 days

    Default: 0

    Description: The number of days for which automatic DB snapshots are retained

    MaxValue: 35

    MinValue: 0

    Type: Number

  DatabaseAllocatedStorage:

    ConstraintDescription: Must be between 5 and 1024Gb

    Default: 20

    Description: The size of the database (Gb)

    MaxValue: 65536

    MinValue: 5

    Type: Number

  DatabaseInstanceClass:

    AllowedValues:

      - db.t1.micro

      - db.t2.micro

      - db.t3.micro

      - db.m1.small

      - db.m1.medium

      - db.m1.large

    ConstraintDescription: Must select a valid database instance type

    Default: db.t3.micro

    Description: The database instance type

    Type: String

  MultiAZDatabase:

    AllowedValues:

      - true

      - false

    ConstraintDescription: Must be either true or false

    Default: false

    Description: Creates a Multi-AZ MySQL Amazon RDS database instance

    Type: String

  ImageId:

    Description: Please provide Image Id

    Type: String

  ProfileName:

    Default: prod

    Type: String

    Description: Enter the profile that you want this to run on either dev or demo

  # AccessKey:

  #   Description: AccessKey

  #   Type: String

  # SecretKey:

  #   Description: SecretKey

  #   Type: String

  DomainName:

    Description: Domain Name

    Type: String

    Default: demo.khismatrao.me

  HostedZoneID:

    Description: Hosted Zone ID

    Type: String

    Default: Z089986629PJYL2YQVOJ7

  GitHubStackName:

    Description: GitHub Roles and Policies Stack Name

    Type: String

    Default: policies-stack

  certificateArn:

    Description: Certificate ARN

    Type: String

    Default: arn:aws:acm:us-east-1:820852419355:certificate/2e841074-ca9f-44fe-8290-7db366d97a5d

  RDScertificateArn:

    Description: Certificate ARN

    Type: String

    Default: arn:aws:kms:us-east-1:820852419355:key/6a3f991d-742c-447d-925e-153f1f800bf5

  EBScertificateArn:

    Description: Certificate ARN

    Type: String

    Default: arn:aws:kms:us-east-1:820852419355:key/441444f1-8c64-431f-9c00-d48e00500ab6

Resources:

  VPC:

    Type: "AWS::EC2::VPC"

    Properties:

      CidrBlock: !Ref VpcCidrBlock

      EnableDnsSupport : 'true'

      EnableDnsHostnames : 'true'

      InstanceTenancy: 'default'

      Tags:

        - Key: Name

          Value: !Join ['', [!Ref "AWS::StackName", "-VPC" ]]

  PublicSubnet1:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 0, !GetAZs '' ]

      CidrBlock: !Ref PublicSubnet1CIDR

      MapPublicIpOnLaunch: true

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Public-1

  PublicSubnet2:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]

      CidrBlock: !Ref PublicSubnet2CIDR

      MapPublicIpOnLaunch: true

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Public-2

  PublicSubnet3:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 2, !GetAZs  '' ]

      CidrBlock: !Ref PublicSubnet3CIDR

      MapPublicIpOnLaunch: true

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Public-3

  InternetGateway:

    Type: AWS::EC2::InternetGateway

    Properties:

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Gateway

  InternetGatewayAttachment:

    Type: AWS::EC2::VPCGatewayAttachment

    Properties:

      InternetGatewayId: !Ref InternetGateway

      VpcId: !Ref VPC

  PublicRouteTable:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref VPC

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Public-Routes

  DefaultPublicRoute:

    Type: AWS::EC2::Route

    DependsOn: InternetGatewayAttachment

    Properties:

      RouteTableId: !Ref PublicRouteTable

      DestinationCidrBlock: 0.0.0.0/0

      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PublicRouteTable

      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PublicRouteTable

      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PublicRouteTable

      SubnetId: !Ref PublicSubnet3

  #Private Subnet for RDS

  PrivateSubnet1:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 0, !GetAZs  '' ]

      CidrBlock: !Ref PrivateSubnet1CIDR

      MapPublicIpOnLaunch: false

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} PrivateSubnet-1

  PrivateSubnet2:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]

      CidrBlock: !Ref PrivateSubnet2CIDR

      MapPublicIpOnLaunch: false

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} PrivateSubnet-2

  PrivateSubnet3:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId: !Ref VPC

      AvailabilityZone: !Select [ 2, !GetAZs  '' ]

      CidrBlock: !Ref PrivateSubnet3CIDR

      MapPublicIpOnLaunch: false

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} PrivateSubnet-3

  PrivateRouteTable1:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref VPC

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} Private Routes (AZ1)

  PrivateSubnet1RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PrivateRouteTable1

      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref VPC

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} Private Routes (AZ2)

  PrivateSubnet2RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PrivateRouteTable2

      SubnetId: !Ref PrivateSubnet2

  PrivateRouteTable3:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId: !Ref VPC

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName} Private Routes (AZ2)

  PrivateSubnet3RouteTableAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      RouteTableId: !Ref PrivateRouteTable3

      SubnetId: !Ref PrivateSubnet3

 #Create Security Group for the Application Load Balancer

  LoadBalancerSecurityGroup:

    Type: 'AWS::EC2::SecurityGroup'

    Properties:

      GroupDescription: Enable HTTP/HTTPS access on port 80/443

      SecurityGroupIngress:

        # HTTPS access

        - IpProtocol: tcp

          FromPort: 443

          ToPort: 443

          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp

          FromPort: 443

          ToPort: 443

          CidrIpv6: ::/0

        # HTTP access

        - IpProtocol: tcp

          FromPort: 80

          ToPort: 80

          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp

          FromPort: 80

          ToPort: 80

          CidrIpv6: ::/0

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-Load Balancer Security Group

      VpcId: !Ref VPC

  #Create Security Group

  WebAppSecurityGroup:

    Type: 'AWS::EC2::SecurityGroup'

    Properties:

      GroupDescription: SSH Security Group

      SecurityGroupIngress:

        # SSH access

        - IpProtocol: tcp

          FromPort: 22

          ToPort: 22

          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp

          FromPort: 22

          ToPort: 22

          CidrIpv6: ::/0

        # Web Server

        - IpProtocol: tcp

          FromPort: 8080

          ToPort: 8080

          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-SSH Security Group

      VpcId: !Ref VPC

  #Create DB Security Group

  DBSecurityGroup:

    Type: 'AWS::EC2::SecurityGroup'

    Properties:

      GroupDescription: DB SecurityGroup

      SecurityGroupIngress:

        # MYSQL access

        - IpProtocol: tcp

          FromPort: 3306

          ToPort: 3306

          SourceSecurityGroupId: !Ref WebAppSecurityGroup

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-DB Security Group

      VpcId: !Ref VPC

  # DemoEc2InstanceRole:

  #   Type: AWS::IAM::Role

  #   Properties:

  #     RoleName: "EC2-CSYE6225"

  #     AssumeRolePolicyDocument:

  #       Version: "2012-10-17"

  #       Statement:

  #         -

  #           Effect: "Allow"

  #           Principal:

  #             Service:

  #               - "ec2.amazonaws.com"

  #           Action:

  #             - "sts:AssumeRole"

  #     Path: "/"

  DemoInstanceProfile:

    Type: AWS::IAM::InstanceProfile

    Properties:

      InstanceProfileName: demo-ec2-instance-profile

      Path: /

      Roles:

      - Fn::ImportValue:

          Fn::Sub: "${GitHubStackName}-ec2ExecutionRoleId"

      # Roles:

      #  - !Ref DemoEc2InstanceRole

  DemoInstanceS3Policy:

    Type: AWS::IAM::Policy

    Properties:

      PolicyName: WebAppS3

      PolicyDocument:

        Version: 2012-10-17

        Statement:

          -

            Effect: Allow

            Action:

              - s3:DeleteObject

              - s3:GetObject

              - s3:PutObject

              - s3:ListObject

            Resource:

              - !Sub arn:aws:s3:::${S3Bucket}/*

              - !Sub arn:aws:s3:::${S3Bucket}

              - !Sub arn:aws:s3:::codedeploy.prod.khismatrao.me/*

              - !Sub arn:aws:s3:::codedeploy.prod.khismatrao.me

      Roles:

      - Fn::ImportValue:

          Fn::Sub: "${GitHubStackName}-ec2ExecutionRoleId"

      # Roles:

      #   -

      #     !Ref DemoEc2InstanceRole

  S3Bucket:

    Type: AWS::S3::Bucket

    Properties:

      BucketName: !Join

        - "."

        - - !Select

            - 0

            - !Split

              - "-"

              - !Select

                - 2

                - !Split

                  - "/"

                  - !Ref "AWS::StackId"

          - Ref: "ProfileName"

          - "khismatrao.me"

      AccessControl: Private

      PublicAccessBlockConfiguration:

        BlockPublicAcls: true

        BlockPublicPolicy: true

        IgnorePublicAcls: true

        RestrictPublicBuckets: true

      BucketEncryption:

        ServerSideEncryptionConfiguration:

          - ServerSideEncryptionByDefault:

              SSEAlgorithm: AES256

      LifecycleConfiguration:

        Rules:

          - Id: Rule for log prefix

            Prefix: logs

            Status: Enabled

            Transitions:

              - TransitionInDays: 30

                StorageClass: STANDARD_IA

  DatabaseSubnetGroup:

    Type: AWS::RDS::DBSubnetGroup

    Properties:

      DBSubnetGroupDescription: Subnet group for RDS database

      SubnetIds:

        - !Ref PrivateSubnet1

        - !Ref PrivateSubnet2

        - !Ref PrivateSubnet3

      Tags:

        - Key: Name

          Value: database subnets

  MyDBParameterGroup:

    Type: AWS::RDS::DBParameterGroup

    Properties:

      Description: CloudFormation Sample MySQL Parameter Group

      Family: mysql5.7

      Parameters:

        performance_schema: 1

        sql_mode: NO_ENGINE_SUBSTITUTION

        max_allowed_packet: 1073741824

        innodb_buffer_pool_size: '{DBInstanceClassMemory*3/4}'

  DatabaseInstance:

    Type: AWS::RDS::DBInstance

    DeletionPolicy: Delete

    Properties:

      AllocatedStorage: !Ref DatabaseAllocatedStorage

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]

      BackupRetentionPeriod: !Ref DatabaseBackupRetentionPeriod

      DBInstanceClass: !Ref DatabaseInstanceClass

      DBInstanceIdentifier: !Ref DatabaseInstanceIdentifier

      DBName: !Ref DatabaseName

      DBSubnetGroupName: !Ref DatabaseSubnetGroup

      DBParameterGroupName: !Ref MyDBParameterGroup

      Engine: MySQL

      PubliclyAccessible : true

      EngineVersion: 5.7.37

      MasterUsername: !Ref DatabaseUser

      MasterUserPassword: !Ref DatabasePassword

      MultiAZ: !Ref MultiAZDatabase

      StorageEncrypted: true

      KmsKeyId: !Ref RDScertificateArn

      VPCSecurityGroups:

        - !Ref DBSecurityGroup

  asglaunchconfig:

    # Type: AWS::AutoScaling::LaunchConfiguration

    # Properties:

    #   LaunchConfigurationName: !Sub '${AWS::StackName}-asg_launch_config'

    #   AssociatePublicIpAddress: "true"

    #   InstanceType: t2.micro

    #   KeyName: application

    #   ImageId: !Ref ImageId

    #   IamInstanceProfile: !Ref DemoInstanceProfile

    #   SecurityGroups:

    #     - !Ref WebAppSecurityGroup

    #   BlockDeviceMappings:

    #   - DeviceName: /dev/xvda

    #     Ebs:

    #       VolumeSize: 20

    #       VolumeType: "gp2"

    #       Encrypted: true

    #       KmsKeyId: "arn:aws:kms:us-east-1:820852419355:key/4911bf85-3bc3-47e4-bf4e-5caf7f5765c6"

    #       DeleteOnTermination: true

    #   UserData:

    #     Fn::Base64: !Sub |

    #       #!/bin/bash

    #       echo "# App Environment Variables"

    #       cd /home/ec2-user/

    #       touch environment.env

    #       echo "DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /home/ec2-user/environment.env

    #       echo "DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /home/ec2-user/environment.env

    #       echo "DB_DATABASE=${DatabaseName}" >> /home/ec2-user/environment.env

    #       echo "DB_USERNAME=${DatabaseUser}" >> /home/ec2-user/environment.env

    #       echo "DB_PASSWORD=${DatabasePassword}" >> /home/ec2-user/environment.env

    #       echo "FILESYSTEM_DRIVER=s3" >> /home/ec2-user/environment.env

    #       echo "AWS_BUCKET_NAME=${S3Bucket}" >> /home/ec2-user/environment.env

    #       sudo chmod 777 /home/ec2-user/environment.env

    #       sudo chmod 777 /home/ec2-user/webapp.sh

    #       cd /etc/systemd/system

    #       sudo chmod 777 application.service

    #       sudo systemctl daemon-reload

    #       sudo systemctl start application.service

    #       sudo systemctl enable application.service

    #       chown -R ec2-user:www-data /var/www

    #       usermod -a -G www-data ec2-user

    #       echo "------------------------------Completed Process------------------------------------"

    Type: AWS::EC2::LaunchTemplate

    Properties:

      LaunchTemplateName: !Sub '${AWS::StackName}-EC2-instance'

      LaunchTemplateData:

        BlockDeviceMappings:

          - DeviceName: "/dev/xvda"

            Ebs:

              VolumeSize: 20

              VolumeType: gp2

              DeleteOnTermination: true

              Encrypted: true

              KmsKeyId: !Ref EBScertificateArn

        KeyName: application

        InstanceType: t2.micro

        IamInstanceProfile:

          Name: !Ref DemoInstanceProfile

        SecurityGroupIds:

          - !Ref WebAppSecurityGroup

        Placement:

          Tenancy: default

        ImageId: !Ref ImageId

        UserData:

         Fn::Base64: !Sub |

           #!/bin/bash

           echo "# App Environment Variables"

           cd /home/ec2-user/

           touch environment.env

           echo "DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /home/ec2-user/environment.env

           echo "DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /home/ec2-user/environment.env

           echo "DB_DATABASE=${DatabaseName}" >> /home/ec2-user/environment.env

           echo "DB_USERNAME=${DatabaseUser}" >> /home/ec2-user/environment.env

           echo "DB_PASSWORD=${DatabasePassword}" >> /home/ec2-user/environment.env

           echo "FILESYSTEM_DRIVER=s3" >> /home/ec2-user/environment.env

           echo "AWS_BUCKET_NAME=${S3Bucket}" >> /home/ec2-user/environment.env

           sudo chmod 777 /home/ec2-user/environment.env

           sudo chmod 777 /home/ec2-user/webapp.sh

           cd /etc/systemd/system

           sudo chmod 777 application.service

           sudo systemctl daemon-reload

           sudo systemctl start application.service

           sudo systemctl enable application.service

           chown -R ec2-user:www-data /var/www

           usermod -a -G www-data ec2-user

           echo "------------------------------Completed Process------------------------------------"

  asgWebApp:

    Type: AWS::AutoScaling::AutoScalingGroup

    Properties:

      AutoScalingGroupName: !Sub ${AWS::StackName}-asg

      AvailabilityZones:

        - us-east-1a

        - us-east-1b

        - us-east-1c

      Cooldown: '60'

      DesiredCapacity: '1'

      HealthCheckGracePeriod: 90

      HealthCheckType: EC2

      LaunchTemplate:

        LaunchTemplateId: !Ref asglaunchconfig

        Version: 1

      MinSize: '1'

      MaxSize: '5'

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-asg

          PropagateAtLaunch: "true"

      TargetGroupARNs:

        - !Ref loadBalancerTargetGroup

      VPCZoneIdentifier:

        - !Ref PublicSubnet1

        - !Ref PublicSubnet2

        - !Ref PublicSubnet3

  WebServerScaleUpPolicy:

    Type: AWS::AutoScaling::ScalingPolicy

    Properties:

      AdjustmentType: ChangeInCapacity

      AutoScalingGroupName:

        Ref: asgWebApp

      Cooldown: 60

      ScalingAdjustment: 1

  WebServerScaleDownPolicy:

    Type: AWS::AutoScaling::ScalingPolicy

    Properties:

      AdjustmentType: ChangeInCapacity

      AutoScalingGroupName:

        Ref: asgWebApp

      Cooldown: 60

      ScalingAdjustment: -1

  CPUAlarmHigh:

    Type: AWS::CloudWatch::Alarm

    Properties:

      AlarmDescription: Scale-up if CPU > 5%

      MetricName: CPUUtilization

      Namespace: AWS/EC2

      Statistic: Average

      Period: '60'

      EvaluationPeriods: 1

      Threshold: 5

      AlarmActions:

      - Ref: WebServerScaleUpPolicy

      Dimensions:

      - Name: AutoScalingGroupName

        Value:

          Ref: asgWebApp

      ComparisonOperator: GreaterThanThreshold

  CPUAlarmLow:

    Type: AWS::CloudWatch::Alarm

    Properties:

      AlarmDescription: Scale-down if CPU < 3%

      MetricName: CPUUtilization

      Namespace: AWS/EC2

      Statistic: Average

      Period: '60'

      EvaluationPeriods: 1

      Threshold: 3

      AlarmActions:

      - Ref: WebServerScaleDownPolicy

      Dimensions:

      - Name: AutoScalingGroupName

        Value:

          Ref: asgWebApp

      ComparisonOperator: LessThanThreshold

  loadBalancer:

    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

    Properties:

      IpAddressType: ipv4

      LoadBalancerAttributes:

        - Key: idle_timeout.timeout_seconds

          Value: '60'

      Name: !Sub ${AWS::StackName}-load-balancer

      Scheme: internet-facing

      SecurityGroups:

        - !Ref LoadBalancerSecurityGroup

      Subnets:

        - !Ref PublicSubnet1

        - !Ref PublicSubnet2

        - !Ref PublicSubnet3

      Tags:

        - Key: Application

          Value: WebApp

        - Key: Name

          Value: !Sub ${AWS::StackName}-load-balancer

      Type: application

  loadBalancerTargetGroup:

    Type: AWS::ElasticLoadBalancingV2::TargetGroup

    Properties:

      HealthCheckIntervalSeconds: 90

      HealthCheckPath: '/'

      HealthCheckPort: '8080'

      HealthCheckProtocol: 'HTTP'

      HealthCheckTimeoutSeconds: 60

      HealthyThresholdCount: 2

      IpAddressType: ipv4

      Name: !Sub ${AWS::StackName}-lb-tg

      Port: 8080

      Protocol: 'HTTP'

      Tags:

        - Key: Name

          Value: !Sub ${AWS::StackName}-lb-tg

      TargetGroupAttributes:

        - Key: deregistration_delay.timeout_seconds

          Value: '20'

      TargetType: instance

      UnhealthyThresholdCount: 2

      VpcId: !Ref VPC

  loadBalancerListener:

    Type: AWS::ElasticLoadBalancingV2::Listener

    Properties:

      DefaultActions:

        - Type: forward

          TargetGroupArn: !Ref loadBalancerTargetGroup

      LoadBalancerArn: !Ref loadBalancer

      Certificates:

        - !Ref certificateArn

      Port: 443

      Protocol: HTTPS

# DNS record

  myDNSRecord:

    Type: AWS::Route53::RecordSet

    Properties:

      Name:

        Ref: DomainName

      Type: A

      HostedZoneId:

        Ref: HostedZoneID

      AliasTarget:

        DNSName:

          Fn::GetAtt:

          - loadBalancer

          - DNSName

        EvaluateTargetHealth: false

        HostedZoneId:

          Fn::GetAtt:

          - loadBalancer

          - CanonicalHostedZoneID

# Code deploy

  codeDeployEC2ServiceRole:

    Type: AWS::IAM::Role

    Properties:

      AssumeRolePolicyDocument:

        Statement:

        - Sid: codeDeployEC2ServiceRole

          Effect: Allow

          Principal:

            Service: codedeploy.amazonaws.com

          Action:

          - sts:AssumeRole

      Path: "/"

      RoleName: CodeDeployEC2ServiceRole

      ManagedPolicyArns:

      - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole

      Tags:

      - Key: Name

        Value:

          Fn::Sub: "${AWS::StackName}-CodeDeployEC2ServiceRole"

  ec2Application:

    Type: AWS::CodeDeploy::Application

    Properties:

      ApplicationName: csye6225-webapp

      ComputePlatform: Server

  ec2DeploymentGroup:

    Type: AWS::CodeDeploy::DeploymentGroup

    Properties:

      ApplicationName:

        Ref: ec2Application

      DeploymentGroupName: csye6225-webapp-deployment

      AutoScalingGroups:

      - Ref: asgWebApp

      ServiceRoleArn:

        Fn::GetAtt:

        - codeDeployEC2ServiceRole

        - Arn

      # LoadBalancerInfo:

      #   TargetGroupInfoList:

      #   - Name: !GetAtt loadBalancerTargetGroup.TargetGroupName

      DeploymentStyle:

        DeploymentType: IN_PLACE

        DeploymentOption: WITHOUT_TRAFFIC_CONTROL

      Ec2TagFilters:

      - Key: Application Role

        Value: Web Server

        Type: KEY_AND_VALUE

      DeploymentConfigName: CodeDeployDefault.AllAtOnce

      AutoRollbackConfiguration:

        Enabled: 'True' #False - then comment below

        Events:

        - DEPLOYMENT_FAILURE

        # - DEPLOYMENT_STOP_ON_ALARM

        # - DEPLOYMENT_STOP_ON_REQUEST

  # DynamoDBPolicy:

  #   Type: AWS::IAM::Policy

  #   Properties:

  #     PolicyName: DynamoDBPolicy

  #     PolicyDocument:

  #       Version: 2012-10-17

  #       Statement:

  #         -

  #           Effect: Allow

  #           Action:

  #             - dynamodb:PutItem

  #             - dynamodb:GetItem

  #             - dynamodb:BatchGetItem

  #             - dynamodb:Scan

  #             - dynamodb:Query

  #             - dynamodb:ConditionCheckItem

  #           Resource:

  #             - arn:aws:dynamodb:us-east-1:820852419355:table/Account

  #     Roles:

  #       -

  #         !Ref codeDeployEC2ServiceRole
